--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services: 
     gogs:
-        image: gogs/gogs
+        image: gogs/gogs-rpi
         ports: 
             - 3030:3000
             - 10022:22
